responsive fix on mobile

--- a/app/design/frontend/Homescapes/Develop/Magento_GroupedProduct/web/css/source/_module.less
+++ b/app/design/frontend/Homescapes/Develop/Magento_GroupedProduct/web/css/source/_module.less
@@ -11,7 +11,7 @@
 @991: ~"only screen and (max-width:991px)";
 
 @1100: ~"only screen and (max-width:1100px)";
-
+@black: #333;
 
 
 @logo-black: #5d5d5d;
@@ -68,7 +68,7 @@
 			border: none;
 			min-height: 1rem;
 			padding-bottom: 0;
-			color: @logo-black;
+			color: @black;
         }
 
         .price-box {
